2023-10-12T00:57:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6489853641 # 1258
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-12
* notice: last 14d: unq all: 7 4163
* notice: prev accum: outdated-unq outdated-all / unq all: 1738 164657 / 1778 169073
* notice: next accum: outdated-unq outdated-all / unq all: 1741 164958 / 1779 169167
* notice: prev exec diff / last date diff / accum: unq all: +1 +94 -0 -46 / +4 +301 -0 -0 / 4 301
* notice: removed / changed dates: [2023-09-27] / [2023-09-28 2023-10-11]

2023-10-11T16:17:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6485256362 # 1257
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-11
* notice: last 14d: unq all: 6 4156
* notice: prev accum: outdated-unq outdated-all / unq all: 1738 164657 / 1777 168978
* notice: next accum: outdated-unq outdated-all / unq all: 1738 164657 / 1778 169073
* notice: prev exec diff / last date diff / accum: unq all: +1 +95 -0 -92 / +3 +207 -0 -0 / 3 207
* notice: removed / changed dates: [] / [2023-09-27 2023-10-11]

2023-10-11T08:17:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6479828344 # 1256
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-11
* notice: last 14d: unq all: 6 4153
* notice: prev accum: outdated-unq outdated-all / unq all: 1738 164657 / 1775 168866
* notice: next accum: outdated-unq outdated-all / unq all: 1738 164657 / 1777 168978
* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -1 -124 / +2 +112 -0 -0 / 2 112
* notice: removed / changed dates: [] / [2023-09-27 2023-10-11]

2023-10-11T00:58:50Z: