@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-10-12T00:57:01Z",
-  "count" : 254,
+  "timestamp" : "2023-10-12T08:17:10Z",
+  "count" : 133,
   "count_minmax" : [ 112, 300 ],
-  "count_decinc" : [ -46, +300 ],
+  "count_decinc" : [ -167, +300 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
