@@ -1,0 +1,9 @@
+{
+  "timestamp" : "2023-10-12T08:17:10Z",
+  "count" : 119,
+  "count_minmax" : [ 119, 119 ],
+  "count_decinc" : [ -0, +119 ],
+  "uniques" : 3,
+  "uniques_minmax" : [ 3, 3 ],
+  "uniques_decinc" : [ -0, +3 ]
+}
