@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-10-12T00:57:01Z",
+  "timestamp" : "2023-10-12T08:17:10Z",
   "count_outdated" : 164958,
   "uniques_outdated" : 1741,
-  "count" : 169167,
-  "uniques" : 1779,
+  "count" : 169286,
+  "uniques" : 1782,
   "clones" : [
     {
       "timestamp": "2023-09-28T00:00:00Z",
-      "count": 254,
+      "count": 133,
       "count_minmax": [ 112, 300 ],
-      "count_decinc": [ 46, 300 ],
+      "count_decinc": [ 167, 300 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -130,6 +130,15 @@
       "uniques": 4,
       "uniques_minmax": [ 2, 4 ],
       "uniques_decinc": [ 0, 4 ]
+    },
+    {
+      "timestamp": "2023-10-12T00:00:00Z",
+      "count": 119,
+      "count_minmax": [ 119, 119 ],
+      "count_decinc": [ 0, 119 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
