@@ -1,10 +1,10 @@
 {
-  "count": 4163,
-  "uniques": 7,
+  "count": 4161,
+  "uniques": 8,
   "clones": [
     {
       "timestamp": "2023-09-28T00:00:00Z",
-      "count": 254,
+      "count": 133,
       "uniques": 2
     },
     {
@@ -71,6 +71,11 @@
       "timestamp": "2023-10-11T00:00:00Z",
       "count": 301,
       "uniques": 4
+    },
+    {
+      "timestamp": "2023-10-12T00:00:00Z",
+      "count": 119,
+      "uniques": 3
     }
   ]
 }
