@@ -1,3 +1,12 @@
+2023-10-12T08:17:10Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6493079873 # 1259
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-12
+* notice: last 14d: unq all: 8 4161
+* notice: prev accum: outdated-unq outdated-all / unq all: 1741 164958 / 1779 169167
+* notice: next accum: outdated-unq outdated-all / unq all: 1741 164958 / 1782 169286
+* notice: prev exec diff / last date diff / accum: unq all: +3 +119 -0 -121 / +3 +119 -0 -0 / 3 119
+* notice: removed / changed dates: [] / [2023-09-28 2023-10-12]
+
 2023-10-12T00:57:01Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6489853641 # 1258
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-12
